--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: @book.user %>
+      <%= render 'users/info', user: @book.user, local: true %>
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @booknew %>
     </div>
@@ -22,16 +22,8 @@
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
           
-          <td>
-            <% if @book.favorited_by?(current_user) %>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %> いいね
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %> いいね
-              <% end %>
-            <% end %>
+          <td id="favorite_btn">
+            <%= render partial: 'favorites/favorite-btn', book: @book %>
           </td>
         </tr>
       </table>
@@ -70,3 +62,5 @@
     </div>
   </div>
 </div>
+
+<%= javascript_include_tag('jquery-3.5.1.min') %>
