--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -19,16 +19,8 @@
           <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
           <td><%= book.body %></td>
           <td><%= link_to "#{book.book_comments.count} 件", book_path(book.id) %></td>
-          <td>
-            <% if book.favorited_by?(current_user) %>
-              <%= link_to book_favorites_path(book), method: :delete do %>
-                ♥<%= book.favorites.count %> いいね
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(book), method: :post do %>
-                ♡<%= book.favorites.count %> いいね
-              <% end %>
-            <% end %>
+          <td class="favorite_btn_<%= book.id %>">
+            <%= render partial: 'favorites/favorite-btn', locals: {book: book} %>
           </td>
         </tr>
       <% end %>
