--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,8 +22,8 @@
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
           
-          <td id="favorite_btn">
-            <%= render partial: 'favorites/favorite-btn', book: @book %>
+          <td class="favorite_btn_<%= @book.id %>">
+            <%= render partial: 'favorites/favorite-btn', locals: {book: @book} %>
           </td>
         </tr>
       </table>
