--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,10 +1,10 @@
-<% if @book.favorited_by?(current_user) %>
-  <%= form_with(url: book_favorites_path(@book), html: { method: :delete }, remote: true) do |f| %>
-      <%= f.submit "♥ #{@book.favorites.count} いいね" %>
+<% if book.favorited_by?(current_user) %>
+  <%= form_with(url: book_favorites_path(book), html: { method: :delete }, remote: true) do |f| %>
+      <%= f.submit "♥ #{book.favorites.count} いいね" %>
   <% end %>
 <% else %>
-  <%= form_with(url: book_favorites_path(@book), html: { method: :post }, remote: true) do |f| %>
-      <%= f.submit "♡ #{@book.favorites.count} いいね" %>
+  <%= form_with(url: book_favorites_path(book), html: { method: :post }, remote: true) do |f| %>
+      <%= f.submit "♡ #{book.favorites.count} いいね" %>
   <% end %>
 <% end %> 
     
