--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,1 +1,1 @@
-$('.favorite_btn_<%= @book.id %>').html("<%= escape_javascript(render partial: 'favorites/favorite-btn', locals: {book: @book}) %>");
+$('.new_comment').html("<%= escape_javascript(render partial: 'book_comments/comment_list') %>");
