--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,7 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
+          
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
@@ -27,37 +28,13 @@
           </td>
         </tr>
       </table>
-      
-      <h2>Comments</h2>
-        <p>コメント件数：<%= @book.book_comments.count %></p>
-        <table class='table'>
-          <% @book.book_comments.each do |book_comment| %>
-          <tr>
-            <td>
-              <%= attachment_image_tag(book_comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %>
-            </td>
-            <td>
-              <%= book_comment.user.name %>
-            </td>
-            <td>
-              <%= book_comment.created_at.strftime('%Y/%m/%d') %>
-            </td>
-            <td>
-              <%= book_comment.comment %>
-            </td>
-            <td>
-              <% if book_comment.user == current_user %>
-                <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, data: { confirm: 'コメントを削除しますか？' }, class: "btn btn-sm btn-danger" %>
-              <% end %>
-            </td>
-          </tr>
-          <% end %>
-        </table>
+        <div class="del_comment new_comment">
+         <%= render partial: 'book_comments/comment_list', locals: {book: @book} %>
+       </div>
+        
+        
       <div class="form-group">
-        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-          <%= f.text_area :comment, rows:'5', placeholder: "コメントをここに", class: 'form-control book_body' %>
-          <%= f.submit "送信する", class: 'btn btn-success' %>
-        <% end %>
+        <%= render partial: 'book_comments/form_comment', locals: {book: @book} %>
       </div>
     </div>
   </div>
