--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,26 @@
           <%= f.email_field :email, autofocus: true, class: "email" %>
         </div>
         <div class="field">
+          <%= f.label :postcode %><br />
+          <%= f.text_field :postcode %>
+        </div>
+        <div class="field">
+          <%= f.label :prefecture_code %><br />
+          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, include_blank: '---都道府県---' %>
+        </div>
+        <div class="field">
+          <%= f.label :address_city %><br />
+          <%= f.text_field :address_city %>
+        </div>
+        <div class="field">
+          <%= f.label :address_street %><br />
+          <%= f.text_field :address_street %>
+        </div>
+        <div class="field">
+          <%= f.label :address_building %><br />
+          <%= f.text_field :address_building %>
+        </div>
+        <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
