--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -16,18 +16,17 @@
           <td>フォロー数：<%= user.follower.count %></td>
           <td>フォロワー数：<%= user.follow.count %></td>
           <td>
-            <% if user != current_user %>
-              <% if user.follow.any? %>
-              <!--重要！レコードを一致させる！エライ！！★★★-->
+              <% if user.followed_by?(current_user) %>
                 <%= link_to user_relationships_path(user), method: :delete do %>
                   フォローを外す
                 <% end %>
+              <!--重要！レコードを一致させる！エライ！！★★★-->
               <% else %>
                 <%= link_to user_relationships_path(user), method: :post do %>
                   フォローする
                 <% end %>
               <% end %>
-            <% end %>
+
           </td>
           <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
         </tr>
