--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,9 +2,9 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: @book.user, local: true %>
+      <%= render 'users/info', user: @book.user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @booknew %>
+      <%= render 'form', book: Book.new %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -17,27 +17,12 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
-          
-          <td class="favorite_btn_<%= @book.id %>">
-            <%= render partial: 'favorites/favorite-btn', locals: {book: @book} %>
-          </td>
         </tr>
       </table>
-        <div class="del_comment new_comment">
-         <%= render partial: 'book_comments/comment_list', locals: {book: @book} %>
-       </div>
-        
-        
-      <div class="form-group">
-        <%= render partial: 'book_comments/form_comment', locals: {book: @book} %>
-      </div>
     </div>
   </div>
 </div>
-
-<%= javascript_include_tag('jquery-3.5.1.min') %>
