--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,24 +13,20 @@
           <%= f.email_field :email, autofocus: true, class: "email" %>
         </div>
         <div class="field">
-          <%= f.label :postcode %><br />
-          <%= f.text_field :postcode %>
+          <%= f.label :postal_code %><br />
+          <%= f.text_field :postal_code %>
         </div>
         <div class="field">
           <%= f.label :prefecture_code %><br />
-          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, include_blank: '---都道府県---' %>
+          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :name, :name %>
         </div>
         <div class="field">
-          <%= f.label :address_city %><br />
-          <%= f.text_field :address_city %>
+          <%= f.label :city %><br />
+          <%= f.text_field :city %>
         </div>
         <div class="field">
-          <%= f.label :address_street %><br />
-          <%= f.text_field :address_street %>
-        </div>
-        <div class="field">
-          <%= f.label :address_building %><br />
-          <%= f.text_field :address_building %>
+          <%= f.label :street %><br />
+          <%= f.text_field :street %>
         </div>
         <div class="field">
           <%= f.label :password %>
